add navigation bar

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,8 +5,11 @@
   padding: 0.2em 0;
 }
 
-body {
-  padding: 0;
+html{ margin:0; height:100% }
+body{
+  margin:0;
+  height:100%;
+  /*background:url("../../assets/admin/layout/img/bg-body.jpg") no-repeat;*/
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -58,26 +61,20 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+.container-opt {
+  margin: 10px 100px;
+  height: 100%;
+  /*position: relative;*/
+}
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.sidebar{
+  float: left;
+  width: 200px;
+  height: 100%;
+}
+.content{
+  margin-left: 200px;
+  background-color: #d9edf7;
+  height: 100%;
 }
